<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical">

	<TextView
		android:id="@+id/empty_icon"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/empty_view_icon"
		android:textSize="60sp" />

	<TextView
		android:id="@+id/empty_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginVertical="20dp"
		android:text="@string/empty_view_title" />

	<Button
		android:id="@+id/empty_refresh"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:backgroundTint="@android:color/holo_red_light"
		android:text="@string/empty_view_refresh" />

</LinearLayout>